--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/modifiers": "^6.0.1",
+    "@hello-pangea/dnd": "^16.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
